test/sema/typeck/module/ctor-call-nested-not-accessible.dora
fn f() { foo::bar::Foo(); }
mod foo { pub mod bar { class Foo } }
